--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div style="width: 820px; height: 300px; overflow-y: auto">
-  <div id="plot" style="width: 800px; height: 600px"></div>
+  <div id="myDiv" style="width: 800px; height: 600px"></div>
 </div>
 <div id="xaxis" style="width: 800px; height: 40px"></div>
 <!-- partial -->
