--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - vertical scroll plotly</title>
+  <title>NDT Heldin Rates</title>
   
 
 </head>
