--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div style="width: 820px; height: 300px; overflow-y: auto">
-  <div id="myDiv" style="width: 800px; height: 600px"></div>
+<div style="height: 300px; overflow-y: auto">
+  <div id="myDiv" style="height: 600px"></div>
 </div>
 <div id="xaxis" style="width: 800px; height: 40px"></div>
 <!-- partial -->
