--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div style="height: 300px; overflow-y: auto">
-  <div id="myDiv" style="height: 600px"></div>
+<div style="height:375px; overflow-y: auto">
+  <div id="plot" style="height:800px"></div>
 </div>
-<div id="xaxis" style="width: 800px; height: 40px"></div>
+<div id="xaxis" style="height: 60px"></div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/plotly.js/2.3.1/plotly.min.js'></script><script  src="./script.js"></script>
 
